--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@ a {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  background: #f2f2f2;
+  background: #f3f3f3;
 }
 
 nav {
@@ -42,4 +43,40 @@ li,
 h1 {
   margin: 0px;
   padding: 0px;
+}
+
+.card {
+  box-sizing: border-box;
+  border: dotted 1px #ccc;
+  width: calc(40% - 20px);
+  height: auto;
+  padding: 10px;
+  margin: 10px;
+  background-color: white;
+}
+
+.card img {
+  width: calc(100% + 20px);
+  height: auto;
+  margin-left: -10px;
+}
+
+.card .username {
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.comment_time,
+.make_comments_hint {
+  color: #807e7e;
+}
+
+.likesCount {
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  .card {
+    width: calc(100% - 20px);
+  }
 }
