--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,116 @@
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  background: #f3f3f3;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background: #f3f3f3;
 }
 
 nav {
-  position: sticky;
-  z-index: 100;
-  width: 100%;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  top: 0;
-  left: 0;
-  height: 60px;
-  padding-left: 20px;
-  padding-right: 20px;
+    position: sticky;
+    z-index: 100;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 ul {
-  list-style: none;
-  display: flex;
-  width: 150px;
-  justify-content: space-between;
-  float: right;
+    list-style: none;
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+    float: right;
 }
+
 ul,
 li,
 h1 {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .card {
-  box-sizing: border-box;
-  border: dotted 1px #ccc;
-  width: calc(40% - 20px);
-  height: auto;
-  padding: 10px;
-  margin: 10px;
-  background-color: white;
+    box-sizing: border-box;
+    border: dotted 1px #ccc;
+    width: calc(40% - 20px);
+    height: auto;
+    padding: 10px;
+    margin: 10px;
+    background-color: white;
 }
 
 .card img {
-  width: calc(100% + 20px);
-  height: auto;
-  margin-left: -10px;
+    width: calc(100% + 20px);
+    height: auto;
+    margin-left: -10px;
 }
 
 .card .username {
-  font-weight: bold;
-  margin-left: 5px;
+    font-weight: bold;
+    margin-left: 5px;
 }
 
 .comment_time,
 .make_comments_hint {
-  color: #807e7e;
+    color: #807e7e;
 }
 
 .likesCount {
-  font-weight: bold;
+    font-weight: bold;
 }
 
-@media only screen and (max-width: 600px) {
-  .card {
-    width: calc(100% - 20px);
-  }
+.storyList {
+    box-sizing: border-box;
+    width: calc(40% - 20px);
+    height: auto;
+    padding: 10px;
+    margin: 10px;
+    background-color: white;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.story {
+    padding: 5px;
+}
+
+.storyList img {
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    border: 3px solid #807e7e;
+}
+
+.storyList p {
+    margin: 0px;
+    font-size: 8pt;
+    text-align: center;
+    color: #262626;
+    white-space: nowrap;
+}
+
+@media only screen and (max-width: 1000px) {
+    .card {
+        width: calc(100% - 20px);
+    }
+    .storyList {
+        width: calc(100% - 20px);
+    }
 }
