--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ body * {
     box-sizing: border-box;
 }
 
-a {
+a:link {
+    color: #008ee2;
+    background-color: transparent;
     text-decoration: none;
 }
 
@@ -48,7 +50,7 @@ h1 {
 
 .card {
     box-sizing: border-box;
-    border: dotted 1px #ccc;
+    border: solid 1px #ccc;
     width: calc(40% - 20px);
     height: auto;
     padding: 10px;
@@ -69,11 +71,25 @@ h1 {
 
 .comment_time,
 .make_comments_hint {
-    color: #807e7e;
+    color: #ccc;
+}
+
+.make_comments {
+    margin: 10px -10px -10px -10px;
+    border-top: 1px solid #ccc;
+}
+
+.make_comments_inside {
+    margin: 10px;
 }
 
 .likesCount {
     font-weight: bold;
+}
+
+.comments p {
+    margin: 0px;
+    margin-bottom: 5px;
 }
 
 .storyList {
@@ -104,6 +120,10 @@ h1 {
     text-align: center;
     color: #262626;
     white-space: nowrap;
+}
+
+.invisibleLink {
+    color: black !important;
 }
 
 @media only screen and (max-width: 1000px) {
