--- a/templates/index.html
+++ b/templates/index.html
@@ -7,46 +7,34 @@
     <meta content="noindex, nofollow" name="robots">
     <meta content="IE=9" http-equiv="X-UA-Compatible" />
     <title>Photo App</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        referrerpolicy="no-referrer" rel="stylesheet" />
+    <link href="/static/styles.css" rel="stylesheet" />
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" referrerpolicy="no-referrer" rel="stylesheet"
+    />
 </head>
 
 <body>
-    <nav>
-        <h1>Photo App</h1>
-        <div class=userControlPannel>
-            <a>username</a>
-            <a><a href="#">Sign out</a></a>
-        </div>
-    </nav>
+    {% include 'includes/navbar.html' %}
     <div class="page-wrap">
         <div class="mainPanel">
             <div class="storyList">
                 <div class="story">
-                    <img alt="BillGates Avatar"
-                        src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg">
+                    <img alt="BillGates Avatar" src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg">
                     <p>BillGates</p>
                 </div>
                 <div class="story">
-                    <img alt="KevinSystrom Avatar"
-                        src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg">
+                    <img alt="KevinSystrom Avatar" src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg">
                     <p>KevinSystrom</p>
                 </div>
                 <div class="story">
-                    <img alt="TimCook Avatar"
-                        src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg">
+                    <img alt="TimCook Avatar" src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg">
                     <p>TimCook</p>
                 </div>
                 <div class="story">
-                    <img alt="ElonMusk Avatar"
-                        src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg">
+                    <img alt="ElonMusk Avatar" src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg">
                     <p>ElonMusk</p>
                 </div>
                 <div class="story">
-                    <img alt="MarkZuck Avatar"
-                        src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg">
+                    <img alt="MarkZuck Avatar" src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg">
                     <p>MarkZuck</p>
                 </div>
             </div>
@@ -55,8 +43,7 @@
                     <div>
                         <h2 style="margin-left: 10px;">
                             <a class="invisibleLink" href="#">gibsonjack</a>
-                            <a class="fas fa-ellipsis-h invisibleLink" href="#"
-                                style="float:right; margin-right: 10px;">
+                            <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;">
                             </a>
                         </h2>
                     </div>
@@ -70,18 +57,12 @@
                         </p>
                         <p class="likesCount">30 likes</p>
                         <p>
-                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum
-                            dolor
-                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                             <a href="#">more</a>
                         </p>
                         <div class="comments">
-                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
-                                sit
-                                amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum
-                                dolor
-                                sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                             <p><span class="comment_time">1 DAY AGO</span></p>
                         </div>
                     </div>
@@ -98,8 +79,7 @@
                     <div>
                         <h2 style="margin-left: 10px;">
                             <a class="invisibleLink" href="#">gibsonjack</a>
-                            <a class="fas fa-ellipsis-h invisibleLink" href="#"
-                                style="float:right; margin-right: 10px;">
+                            <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;">
                             </a>
                         </h2>
                     </div>
@@ -113,18 +93,12 @@
                         </p>
                         <p class="likesCount">30 likes</p>
                         <p>
-                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum
-                            dolor
-                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                             <a href="#">more</a>
                         </p>
                         <div class="comments">
-                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
-                                sit
-                                amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum
-                                dolor
-                                sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                             <p><span class="comment_time">1 DAY AGO</span></p>
                         </div>
                     </div>
@@ -141,8 +115,7 @@
                     <div>
                         <h2 style="margin-left: 10px;">
                             <a class="invisibleLink" href="#">gibsonjack</a>
-                            <a class="fas fa-ellipsis-h invisibleLink" href="#"
-                                style="float:right; margin-right: 10px;">
+                            <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;">
                             </a>
                         </h2>
                     </div>
@@ -156,18 +129,12 @@
                         </p>
                         <p class="likesCount">30 likes</p>
                         <p>
-                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum
-                            dolor
-                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                             <a href="#">more</a>
                         </p>
                         <div class="comments">
-                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
-                                sit
-                                amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum
-                                dolor
-                                sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                             <p><span class="comment_time">1 DAY AGO</span></p>
                         </div>
                     </div>
@@ -184,8 +151,7 @@
                     <div>
                         <h2 style="margin-left: 10px;">
                             <a class="invisibleLink" href="#">gibsonjack</a>
-                            <a class="fas fa-ellipsis-h invisibleLink" href="#"
-                                style="float:right; margin-right: 10px;">
+                            <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;">
                             </a>
                         </h2>
                     </div>
@@ -199,18 +165,12 @@
                         </p>
                         <p class="likesCount">30 likes</p>
                         <p>
-                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum
-                            dolor
-                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                            <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                             <a href="#">more</a>
                         </p>
                         <div class="comments">
-                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
-                                sit
-                                amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum
-                                dolor
-                                sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                             <p><span class="comment_time">1 DAY AGO</span></p>
                         </div>
                     </div>
@@ -227,8 +187,7 @@
         </div>
         <div class="sidePanel">
             <div class="currUser">
-                <h1><img alt="gibsonjack Avatar" src="https://picsum.photos/60"
-                        style="border-radius: 50%; margin-right: 10px;" /> gibsonjack</h1>
+                <h1><img alt="gibsonjack Avatar" src="https://picsum.photos/60" style="border-radius: 50%; margin-right: 10px;" /> gibsonjack</h1>
             </div>
             <div>
                 <p style="color: gray; font-weight: bold;">Suggestions for you</p>
