--- a/static/styles.css
+++ b/static/styles.css
@@ -72,20 +72,27 @@ nav {
     background-color: white;
     display: flex;
     justify-content: flex-start;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.storyList::-webkit-scrollbar {
+    display: none;
 }
 
 .storyList img {
     border-radius: 50%;
     width: 55px;
     height: 55px;
-    border: 2px solid #807e7e;
+    border: 3px solid #aaaaaa;
 }
 
 .storyList p {
     margin: 0px;
-    font-size: 8pt;
+    font-size: 9pt;
     text-align: center;
-    color: #262626;
+    color: #aaaaaa;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -117,7 +124,6 @@ nav {
 
 .card .username {
     font-weight: bold;
-    margin-left: 5px;
 }
 
 .comment_time {
@@ -159,7 +165,14 @@ nav {
     float: left;
     display: inline;
     overflow-x: hidden;
-    padding-left:30px;
+    padding-left: 30px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.sidePanel::-webkit-scrollbar {
+    display: none;
 }
 
 .currUser {
@@ -169,7 +182,7 @@ nav {
     align-items: center;
 }
 
-.currUser h1 {
+.currUser h2 {
     top: 0;
     display: flex;
     align-items: center;
