--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,15 @@
     <meta content="IE=9" http-equiv="X-UA-Compatible" />
     <title>Photo App</title>
     <link href="/static/styles.css" rel="stylesheet" />
-    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        referrerpolicy="no-referrer" rel="stylesheet" />
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" referrerpolicy="no-referrer" rel="stylesheet"
+    />
 </head>
 
 <body>
     {% include 'includes/navbar.html' %}
     <div class="page-wrap">
         <div class="mainPanel">
-            {% include 'includes/stories.html' %}
-            {% include 'includes/cards.html' %}
+            {% include 'includes/stories.html' %} {% include 'includes/cards.html' %}
         </div>
         {% include 'includes/suggestions.html' %}
     </div>
