--- a/templates/includes/cards.html
+++ b/templates/includes/cards.html
@@ -4,17 +4,17 @@
         <div>
             <h2>
                 <a class="invisibleLink" href="#">{{ post.user.username }}</a>
-                <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;">
+                <a class="fas fa-ellipsis-h invisibleLink" href="#" aria-label="More Option" style="float:right; margin-right: 10px;">
                 </a>
             </h2>
         </div>
         <img alt="{{post.title}}" src="{{post.image_url}}" />
         <div>
             <p>
-                <a class="far fa-heart fa-lg invisibleLink" href="#"></a>&ensp;
-                <a class="far fa-comment fa-lg invisibleLink" href="#"></a>&ensp;
-                <a class="far fa-paper-plane fa-lg invisibleLink" href="#"></a>
-                <a class="far fa-bookmark fa-lg invisibleLink" href="#" style="float:right;"></a>
+                <a class="far fa-heart fa-lg invisibleLink" aria-label="Like the Post" href="#"></a>&ensp;
+                <a class="far fa-comment fa-lg invisibleLink" aria-label="View Comments" href="#"></a>&ensp;
+                <a class="far fa-paper-plane fa-lg invisibleLink" aria-label="Share" href="#"></a>
+                <a class="far fa-bookmark fa-lg invisibleLink" aria-label="Save" href="#" style="float:right;"></a>
             </p>
             <p class="likesCount">{{post.likes}} likes</p>
             <p>
@@ -22,15 +22,20 @@
                 <a href="#">more</a>
             </p>
             <div class="comments">
-                {% for comment in post.comments %}
-                <p><span class="username">{{comment.user.username}}</span> {{comment.text}}</p>
-                {% endfor %}
+            {% if post.comments|length == 1 %}
+                <p><span class="username">{{post.comments[0].user.username}}</span> {{post.comments[0].text}}</p>
+            {% elif post.comments|length > 1%}
+                <a href="#">&nbsp;&nbsp;View all {{post.comments|length}} comments</a>
+                <p><span class="username">{{post.comments[0].user.username}}</span> {{post.comments[0].text}}</p>
+            {% else %}
+                The post doesn't have a comment yet.
+            {% endif %}
             </div>
         </div>
         <div class="make_comments">
             <div class="make_comments_inside">
                 <i class="far fa-smile"></i>
-                <input type="text" class="make_comments_hint" placeholder="Add a comment..."> </input>
+                <input type="text" class="make_comments_hint" aria-label="Input your comment" placeholder="Add a comment..."> </input>
                 <a href="#" style="float:right;">Post</a>
             </div>
         </div>
