--- a/templates/includes/suggestions.html
+++ b/templates/includes/suggestions.html
@@ -3,14 +3,14 @@
         <h2><img alt="{{ user.username }} Avatar" src="{{ user.profile_url }}" style="border-radius: 50%; margin-right: 10px;" /> {{ user.username }}</h2>
     </div>
     <div>
-        <p style="color: gray; font-weight: bold;">Suggestions for you</p>
+        <p style="color: #585858; font-weight: bold;">Suggestions for you</p>
         {% for suggestion in suggestions%}
         <div class="suggestedUsers">
 
             <img alt="{{ suggestion.username }} Avatar" src="{{ suggestion.thumb_url }}" />
             <div>
                 <span class="username">{{ suggestion.username }}</span><br>
-                <span style="color: gray; margin-right:30px">suggested for you</span>
+                <span style="color: #585858; margin-right:30px">suggested for you</span>
             </div>
             <a href="#" style="float:right;">follow</a>
         </div>
