--- a/static/styles.css
+++ b/static/styles.css
@@ -89,7 +89,7 @@ nav {
     border-radius: 50%;
     width: 55px;
     height: 55px;
-    border: 3px solid #585858;
+    border: 3px solid #ccc;
 }
 
 .storyList p {
@@ -130,8 +130,8 @@ nav {
     font-weight: bold;
 }
 
-.comment_time {
-    color: #ccc;
+.post_time {
+    color: rgb(124, 124, 124);
 }
 
 .make_comments_hint {
@@ -192,6 +192,10 @@ nav {
     align-items: center;
 }
 
+.currUser img{
+    border-radius: 50%; margin-right: 10px;width: 80px;
+}
+
 .suggestedUsers {
     display: flex;
     flex-wrap: wrap;
@@ -233,4 +237,8 @@ nav {
     .sidePanel {
         display: none;
     }
+}
+
+.red{
+    color:  #cf0c0c !important;
 }
