--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,12 @@
     <link href="/static/styles.css" rel="stylesheet" />
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" referrerpolicy="no-referrer" rel="stylesheet"
     />
+    <script lang="text/javascript" src="/static/js/hw04.js" defer></script>
+
 </head>
 
 <body>
-    {% include 'includes/navbar.html' %}
+    {% include 'includes/nav.html' %}
     <div class="page-wrap">
         <div class="mainPanel">
             {% include 'includes/stories.html' %} {% include 'includes/cards.html' %}
@@ -22,8 +24,4 @@
     </div>
     </div>
 </body>
-<!-- Solutions for users to add alt-text to image: When users are trying to send a new post,
-add a text field to allow users to write alt text other than having user go into the Advance
-setting to do so. -->
-
 </html>
