--- a/templates/includes/detail.html
+++ b/templates/includes/detail.html
@@ -1,7 +1,7 @@
 <div id="postModal" class="modal">
 
   <!-- Modal content -->
-  <span class="closePostModal" onclick="closePostModal()">&times;</span>
+  <a class="closePostModal invisibleLink" onclick="closePostModal()" href="javascript:{}" tabindex="0">&times;</a>
   <div class="modal-content">
 
   </div>
