--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,14 @@
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" referrerpolicy="no-referrer" rel="stylesheet"
     />
     <script lang="text/javascript" src="/static/js/hw04.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5F63W1TZEQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-5F63W1TZEQ');
+    </script>
 </head>
 
 <body>
