--- a/templates/api/api-docs.html
+++ b/templates/api/api-docs.html
@@ -12,6 +12,14 @@
     <!-- scripts -->
     <script lang="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js" integrity="sha512-IaaKO80nPNs5j+VLxd42eK/7sYuXQmr+fyywCNA0e+C6gtQnuCXNtORe9xR4LqGPz5U9VpH+ff41wKs/ZmC3iA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script lang="text/javascript" src="/static/js/api.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5F63W1TZEQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5F63W1TZEQ');
+    </script>
 </head>
 <body>
 
